# docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  common_rule.UploadFileResponse:
+    properties:
+      file_url:
+        type: string
+    type: object
   errcode.Error:
     type: object
   rules.ArticleGetResponse:
@@ -342,4 +347,37 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 更新标签
+  /c/upload/file:
+    post:
+      parameters:
+      - description: 文件类型
+        in: body
+        name: type
+        required: true
+        schema:
+          type: integer
+      - description: 文件
+        in: body
+        name: file
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 文件上传成功
+          schema:
+            items:
+              $ref: '#/definitions/common_rule.UploadFileResponse'
+            type: array
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 文件上传
 swagger: "2.0"
